# marketing-analyst-agent

./: .gitignore  README.md  generate_dataset.py  hello.py  pyproject.toml
app/: main.py
app/agents/: eda_agent.py  ingestion_agent.py  insight_agent.py  ml_agent.py  plan_agent.py  report_agent.py
app/models/: campaign_classifier.py
app/services/: groq_client.py  langgraph_flow.py  viz_service.py
app/templates/: report.html
app/utils/: feature_engineering.py  file_utils.py
data/: demo_marketing_data.csv
ui/: app.py
