[project]
name = "marketing-analytics-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.3.5",
    "fastapi>=0.122.0",
    "jinja2>=3.1.6",
    "kaleido>=1.2.0",
    "langchain-core>=1.1.0",
    "langchain-groq>=1.1.0",
    "langgraph>=1.0.4",
    "markdown>=3.10",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pdfkit>=1.0.0",
    "plotly>=6.5.0",
    "prophet>=1.2.1",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.20",
    "reportlab>=4.4.5",
    "scikit-learn>=1.7.2",
    "statsmodels>=0.14.5",
    "uvicorn[standard]>=0.38.0",
]
